--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,10 +8,31 @@
 </ion-header>
 
 <ion-content>
+  <ion-card class="card card-md">
 
-  <h2>Welcome to barcode scanner</h2>
-  <button ion-button full round (click)="scan()">Start Scan</button>
+    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <ion-list>
+      <ion-item *ngFor="let item of items">
+        {{ item }}
+      </ion-item>
+    </ion-list>
+    <img src="assets/imgs/logo.png">
 
+    <ion-card-content class="card-content card-content-md">
+      <ion-card-title class="card-title card-title-md">
+        <h1>Bienvenue dans <b>MedocCheck</b></h1>
+      </ion-card-title>
+      <p>
+        <b>MedocCheck</b> est une application mobile qui permet de
+        vérifier l'authenticité et la validité des médicaments.
+        Vous pouvez juste en scannant le <b>code barre</b> ou le <b>code Qr(<em>DATA-MATRIX</em>)</b>,
+        récupérer les informations du médicament.
+      </p>
+    </ion-card-content>
+
+    <button color="secondary" ion-button round  full  (click)="scan()"><b>Lancer le Scan</b></button>
+
+  </ion-card>
 
   <ion-list>
     <ion-item>
@@ -21,6 +42,7 @@
     </ion-item>
   </ion-list>
   <!-- Real floating action button, fixed. It will not scroll with the content -->
+
   <ion-fab top right edge>
     <button ion-fab mini><ion-icon name="add"></ion-icon></button>
     <ion-fab-list>
@@ -29,19 +51,6 @@
       <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
       <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
     </ion-fab-list>
-  </ion-fab>
-
-  <ion-fab right bottom>
-    <button ion-fab color="light"><ion-icon name="arrow-dropleft"></ion-icon></button>
-    <ion-fab-list side="left">
-      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-fab middle="" right="">
-    <button color="danger" ion-fab="" class="fab fab-md fab-md-danger"><ion-icon class="fab-close-icon icon icon-md ion-md-close" name="close" role="img" aria-label="close"></ion-icon><span class="button-inner"><ion-icon name="add" role="img" class="icon icon-md ion-md-add" aria-label="add"></ion-icon></span><div class="button-effect" style="transform: translate3d(-57px, -32px, 0px) scale(1); height: 320px; width: 320px; opacity: 0; transition: transform 301ms, opacity 211ms 90ms;"></div></button>
   </ion-fab>
 
 
