--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,9 +36,9 @@
 
   <ion-list>
     <ion-item>
-      <h1>cancelled : {{data.cancelled}}</h1>
-      <h1>format : {{data.format}}</h1>
-      <h1>text : {{data.text}}</h1>
+      <h1>Data Status : {{data.cancelled}}</h1>
+      <h1>Data Format : {{data.format}}</h1>
+      <h1>Result Printed : {{data.text}}</h1>
     </ion-item>
   </ion-list>
   <!-- Real floating action button, fixed. It will not scroll with the content -->
