--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -9,5 +9,14 @@
 
 <ion-content>
 
+  <button color="secondary" ion-button round  full  (click)="fetch()"><b>Lire les Infos</b></button>
 
+
+  <!-- <ion-list>
+    <ion-item>
+      <h1>data : {{data.Article}}</h1>
+      <h1>format : {{data.Référence}}</h1>
+      <h1>text : {{data.text}}</h1>
+    </ion-item>
+  </ion-list> -->
 </ion-content>
