--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -10,50 +10,61 @@
 <ion-content>
   <ion-card class="card card-md">
 
-    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <!-- <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
     <ion-list>
       <ion-item *ngFor="let item of items">
         {{ item }}
       </ion-item>
-    </ion-list>
-    <img src="assets/imgs/logo.png">
+    </ion-list> -->
+    <img src="assets/imgs/takeCare.jpg">
 
     <ion-card-content class="card-content card-content-md">
       <ion-card-title class="card-title card-title-md">
-        <h1>Bienvenue dans <b>MedocCheck</b></h1>
+        <h1>Bienvenue dans <b>#TakeCare</b></h1>
       </ion-card-title>
       <p>
-        <b>MedocCheck</b> est une application mobile qui permet de
+        <b>#TakeCare</b> est une application mobile qui permet de
         vérifier l'authenticité et la validité des médicaments.
         Vous pouvez juste en scannant le <b>code barre</b> ou le <b>code Qr(<em>DATA-MATRIX</em>)</b>,
         récupérer les informations du médicament.
       </p>
     </ion-card-content>
-
-    <button color="secondary" ion-button round  full  (click)="scan()"><b>Lancer le Scan</b></button>
-
   </ion-card>
 
   <ion-list>
     <ion-item>
-      <h1>Data Status : {{data.cancelled}}</h1>
+      <h1>Data Status :{{data.cancelled}}</h1>
       <h1>Data Format : {{data.format}}</h1>
       <h1>Result Printed : {{data.text}}</h1>
     </ion-item>
   </ion-list>
+  <br>
+  <br>
+
   <!-- Real floating action button, fixed. It will not scroll with the content -->
 
   <ion-fab top right edge>
     <button ion-fab mini><ion-icon name="add"></ion-icon></button>
     <ion-fab-list>
       <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-instagram"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-snapchat"></ion-icon></button>
       <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
     </ion-fab-list>
   </ion-fab>
 
 
 </ion-content>
-
+<button (click)="scan()">
+<ion-footer >
+  <ion-toolbar color="secondary">
+      <ion-grid>
+          <ion-row>
+           <img src="assets/imgs/qr_code_logo.png" width="15%" height="15%">
+           <ion-title>SCANNER</ion-title>
+          </ion-row>
+      </ion-grid>
+  </ion-toolbar>
+</ion-footer>
+</button>
 
