--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the AboutPage page.
+  Generated template for the ContactPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,9 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>about</ion-title>
+    <ion-title>contact</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
+<ion-content padding>
+
+</ion-content>
