Fix Rest api Medicaments

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -12,4 +12,30 @@
 
 </ion-header>
 
+<ion-content>
+  <img src="assets/imgs/takeCare.jpg">
+
+    <ion-card-content class="card-content card-content-md">
+      <ion-card-title class="card-title card-title-md">
+        A propos de <h2 style="color:mediumseagreen"><b>#TakeCare</b></h2>
+      </ion-card-title>
+      <p>
+        <b>#TakeCare</b> est une application mobile qui permet de
+        vérifier l'authenticité et la validité des médicaments.
+        Vous pouvez juste en scannant le <b>code barre</b> ou le <b>code Qr(<em>DATA-MATRIX</em>)</b>,
+        récupérer les informations du médicament.
+      </p>
+      <i style="color:lightsteelblue">http://tackeCare.com</i><br>
+      <p></p>
+    </ion-card-content>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="dark">
+  <p style="color: white">Application #TakeCare 
+   <br>
+  version 1.0.0
+  </p>
+  </ion-toolbar>
+</ion-footer>
 
