--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,17 +27,18 @@
         vérifier l'authenticité et la validité des médicaments.
         Vous pouvez juste en scannant le <b>code barre</b> ou le <b>code Qr(<em>DATA-MATRIX</em>)</b>,
         récupérer les informations du médicament.
+        
       </p>
     </ion-card-content>
   </ion-card>
 
-  <ion-list>
+  <!-- <ion-list>
     <ion-item>
       <h1>Data Status :{{data.cancelled}}</h1>
       <h1>Data Format : {{data.format}}</h1>
       <h1>Result Printed : {{data.text}}</h1>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
   <br>
   <br>
 
