--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
+  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
-
+  
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxKPDrJw_6aaIWrOtSBL1Q1oaUMq6ACkw
+  &callback=initMap"
+  type="text/javascript"></script>
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
