--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -8,25 +8,12 @@
 </ion-header>
 
 <ion-content>
-  <!-- <ion-card *ngIf="medicaments">
-   <img [src]="medicaments.poster_path" />
-   <ion-card-header>
-     <h2>Synopsis
-       <ion-badge color="primary">{{medicaments.authorization_holder}}</ion-badge>
-     </h2>
-   </ion-card-header>
-   <ion-card-content>{{medicaments.id}}</ion-card-content>
-   <ion-card-content>{{medicaments.title}}</ion-card-content>
-   <ion-card-content>{{medicaments.price}}</ion-card-content>
-   <ion-card-content>{{medicaments.cis_code}}</ion-card-content>
- </ion-card> -->
  <ion-card *ngIf="medicaments">
-
   <img [src]="medicaments.poster_path">
 
-  <ion-card-content class="card-content card-content-md">
+   <ion-card-content class="card-content card-content-md">
     <ion-card-title class="card-title card-title-md">
-        {{medicaments.title}}
+        <b>{{medicaments.title}}</b>
     </ion-card-title>
     <p>
         {{medicaments.authorization_holder}}
@@ -34,7 +21,7 @@
   </ion-card-content>
 
   <ion-row class="row" no-padding="">
-    <ion-col class="col">
+    <!-- <ion-col class="col">
       <button clear="" color="danger" icon-start="" ion-button="" small="" class="button button-md button-clear button-clear-md button-small button-small-md button-clear-md-danger"><span class="button-inner">
         <ion-icon name="star" role="img" class="icon icon-md ion-md-star" aria-label="star"></ion-icon>
         {{medicaments.id}}
@@ -43,10 +30,13 @@
     <ion-col class="col" text-center="">
       <button clear="" color="danger" icon-start="" ion-button="" small="" class="button button-md button-clear button-clear-md button-small button-small-md button-clear-md-danger"><span class="button-inner">
         <ion-icon name="musical-notes" role="img" class="icon icon-md ion-md-musical-notes" aria-label="musical notes"></ion-icon>
-        {{medicaments.price}}
+        {{medicaments[0]}}
       </span><div class="button-effect"></div></button>
+    </ion-col> -->
+    <ion-col class="col-md-12" text-center="">
+      <button ion-button color="secondary" outline>En savoir plus...</button>
     </ion-col>
-  </ion-row>
+   </ion-row>
 
 </ion-card>
 </ion-content>
