--- a/src/pages/list_medicaments/list_medicaments.html
+++ b/src/pages/list_medicaments/list_medicaments.html
@@ -7,8 +7,12 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-    <ion-searchbar (ionInput)="getItems(medicaments)"></ion-searchbar>
-    
+    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <ion-list>
+      <ion-item *ngFor="let item of items">
+        {{ item }}
+      </ion-item>
+    </ion-list>
     <!-- <ion-list>
       <ion-item *ngIf="medicaments">
         <ion-thumbnail item-start>
