--- a/src/pages/list_pharmacie/list_pharmacie.html
+++ b/src/pages/list_pharmacie/list_pharmacie.html
@@ -7,7 +7,11 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+
+    <!-- <div #map id="map">
+      
+    </div>  -->
 
 
 </ion-content>
