Fix Redirection to medics base

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-
+ <meta http-equiv="Content-Security-Policy" content="default-src *; style-src   'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -19,8 +19,7 @@
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
   
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxKPDrJw_6aaIWrOtSBL1Q1oaUMq6ACkw
-  &callback=initMap"
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6FclBwySs3RZ-tAlf0dfMzUUuX3WKehw&callback=initMap"
   type="text/javascript"></script>
   <!-- un-comment this code to enable service worker
   <script>
