--- a/src/pages/list_pharmacie/list_pharmacie.html
+++ b/src/pages/list_pharmacie/list_pharmacie.html
@@ -9,9 +9,9 @@
 
 <ion-content padding>
 
-    <!-- <div #map id="map">
+    <div #map id="map">
       
-    </div>  -->
+    </div> 
 
 
 </ion-content>
