--- a/src/pages/signaler/signaler.html
+++ b/src/pages/signaler/signaler.html
@@ -8,11 +8,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-list inset>
-  <ion-item *ngFor='let medicament of medicaments'>
-     <h1>{{medicament.id}}</h1>
-     <h2>{{medicament.title}}</h2>
-     <p>{{medicament.authorization_holder}}</p>
-  </ion-item>
-  </ion-list>
-  </ion-content>
+  <ion-card>
+    <ion-card-content>
+
+    <button ion-button icon-right (click)="onTakePicture()">
+      Take Picture <ion-icon name="camera"></ion-icon>
+    </button>
+
+    <img *ngIf="image"
+      [src]="domSanitizer.bypassSecurityTrustUrl(image)" />
+
+  </ion-card-content>
+</ion-card>
+</ion-content>
