Fix Api resutls printed

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6FclBwySs3RZ-tAlf0dfMzUUuX3WKehw"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-  <script src="cordova.js"></script>
-  
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6FclBwySs3RZ-tAlf0dfMzUUuX3WKehw&callback=initMap"
-  type="text/javascript"></script>
-  <!-- un-comment this code to enable service worker
+
+  <script src="cordova.js"></script>  <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
