Google Map fix erros

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
+<!-- load google map api -->
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaVYyDEdtOwrYh-mHjN6dg7AfxBt1pdgI&v=3.exp&libraries=places"></script>
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpwbltZSqDmScWEoVZPIANvXeyfxtjcug" type="text/javascript"></script> -->
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6FclBwySs3RZ-tAlf0dfMzUUuX3WKehw"></script>
-  <!-- cordova.js required for cordova apps (remove if not needed) -->
+<!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
   <script src="cordova.js"></script>  <!-- un-comment this code to enable service worker
