--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,10 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+    <ion-navbar color="dark">
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
     <ion-title>about</ion-title>
   </ion-navbar>
-
+  
 </ion-header>
 
 <ion-content>
