--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -6,7 +6,10 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+    <ion-navbar color="dark">
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
     <ion-title>contact</ion-title>
   </ion-navbar>
 
