--- a/src/pages/list_pharmacie/list_pharmacie.html
+++ b/src/pages/list_pharmacie/list_pharmacie.html
@@ -1,17 +1,31 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>List Pharmacie</ion-title>
-  </ion-navbar>
+    <ion-navbar color="primary">
+        <ion-buttons left>
+            <button ion-button (click)="close()">Cancel</button>
+        </ion-buttons>
+        <ion-buttons right>
+            <button [disabled]="saveDisabled" ion-button (click)="save()">Save</button>
+        </ion-buttons>
+    </ion-navbar>
+ 
+    <ion-toolbar>
+        <ion-searchbar [(ngModel)]="query" (ionInput)="searchPlace()"></ion-searchbar>
+    </ion-toolbar>
+ 
+    <ion-list>
+        <ion-item *ngFor="let place of places" (touchstart)="selectPlace(place)">{{place.description}}</ion-item>
+    </ion-list>
+ 
 </ion-header>
-
-<ion-content padding>
-
+ 
+<ion-content>
+ 
+    <div #pleaseConnect id="please-connect">
+        <p>Please connect to the Internet...</p>
+    </div>
+ 
     <div #map id="map">
-      
-    </div> 
-
-
+        <ion-spinner></ion-spinner>
+    </div>
+ 
 </ion-content>
