--- a/src/pages/share/share.html
+++ b/src/pages/share/share.html
@@ -5,8 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
+    <ion-navbar color="dark">
     <ion-title></ion-title>
     <ion-buttons end>
         <button ion-button color="primary"  (click)="loadHome()">Passer <ion-icon name="arrow-forward"></ion-icon></button>
@@ -20,7 +19,7 @@
 
   <ion-slides pager>
     <ion-slide *ngFor="let slide of slides">
-      <img [src]="slide.image" class="slide-image"/>
+      <img [src]="slide.image" class="slide-image" style="border-radius: 100%"/>
       <h2 class="slide-title" [innerHTML]="slide.title"></h2>
       <p [innerHTML]="slide.description"></p>
     </ion-slide>
